--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "browser-image-compression": "^2.0.2",
     "eslint": "8.53.0",
     "eslint-config-next": "^14.0.1",
     "next": "^14.0.1",
